[947c9eee637a809ca00f7bca21e9ad8247f759ab]: Update 2018-09-10-emv3ds.md

--- a/manual/emv3ds.html
+++ b/manual/emv3ds.html
@@ -173,7 +173,7 @@
 
 <p><strong>- Visa:</strong> a bandeira não possui modelo de Stand-In e apenas Emissores 100% prontos com solução própria estão aptos a responder um pedido de autenticação usando EMV 3DS 2.0.</p>
 
-<aside class="notice">Emissores já prontos com solução própria de 3DS 2.0 Visa: Caixa (Crédito), Santander (Débito e Crédito) e Itaú (Débito e Crédito – atualmente com autenticação silenciosa, sem desafio).</aside>
+<aside class="notice">Emissores já prontos com solução própria de 3DS 2.0 Visa: Caixa (Crédito), Banco do Brasil (Débito e Crédito), Santander (Débito e Crédito) e Itaú (Débito e Crédito – atualmente com autenticação silenciosa, sem desafio).</aside>
 
 <h2 id="o-que-é-o-data-only--somente-notificação">O que é o Data Only – Somente Notificação</h2>
 
